# quaalude

./: Makefile  README.md  cabal.project  default.nix  flake.nix  hie.yaml  package.yaml  quaalude.cabal  release.nix
src/: Quaalude.hs
src/Helper/: Megaparsec.hs  Records.hs  Unary.hs  Util.hs
src/Quaalude/: Alias.hs  Bits.hs  BoundedSet.hs  Braket.hs  Collection.hs  Compose.hs  Coord.hs  Described.hs  Geometry.hs  Grid.hs  Lists.hs  LossQ.hs  Math.hs  MaxSet.hs  Megaparsec.hs  QuasiSet.hs  Records.hs  Reducible.hs  Shape.hs  Show.hs  Solve.hs  TH.hs  Tracers.hs  Tuple.hs  Type.hs  Unary.hs  Util.hs  Variadic.hs
src/Quaalude/Encoding/: JSON.hs
src/Quaalude/Encoding/JSON/: Instances.hs  TH.hs
test/: Spec.hs
test/Quaalude/Test/: Spec.hs
