cabal-version:      2.4
name:               quaalude
version:            0.2.0.0
author:             Harry Askham
maintainer:         harryaskham@gmail.com

common common-settings
    build-depends:      base,
                        relude,
                        pqueue,
                        bytestring,
                        parsec,
                        megaparsec,
                        replace-megaparsec,
                        vector,
                        array,
                        extra,
                        split,
                        text,
                        containers,
                        unordered-containers,
                        mtl,
                        bimap,
                        mod,
                        semirings,
                        distributive,
                        template-haskell,
                        file-embed,
                        utility-ht,
                        monad-memo,
                        benchpress,
                        fin,
                        MissingH,
                        safe,
                        linear,
                        lens,
                        bitwise,
                        random,
                        random-shuffle,
                        MonadRandom,
                        string-qq,
                        hashable,
                        aeson,
                        deriving-aeson,
                        aeson-casing,
                        barbies,
                        req
    default-language:   Haskell2010
    mixins:             base hiding (Prelude),
                        relude (Relude as Prelude),
                        relude
    default-extensions: OverloadedStrings,
                        OverloadedLabels,
                        TupleSections,
                        ViewPatterns,
                        StandaloneKindSignatures,
                        DerivingVia,
                        LambdaCase,
                        MultiWayIf,
                        QuantifiedConstraints,
                        ConstraintKinds,
                        MonadComprehensions,
                        UnicodeSyntax,
                        BlockArguments,
                        ImportQualifiedPost,
                        EmptyCase,
                        StarIsType,
                        PostfixOperators,
                        FlexibleContexts,
                        FlexibleInstances,
                        InstanceSigs,
                        MultiParamTypeClasses,
                        UndecidableInstances,
                        QuasiQuotes,
                        NamedFieldPuns,
                        DeriveFoldable,
                        DeriveFunctor,
                        DeriveGeneric,
                        DeriveLift,
                        DeriveAnyClass,
                        DeriveTraversable,
                        DerivingStrategies,
                        GeneralizedNewtypeDeriving,
                        StandaloneDeriving,
                        ScopedTypeVariables,
                        RankNTypes,
                        TypeApplications,
                        TypeOperators,
                        TypeFamilies,
                        ApplicativeDo,
                        DefaultSignatures,
                        PatternSynonyms,
                        ExistentialQuantification,
                        FunctionalDependencies,
                        GADTs,
                        DataKinds,
                        PolyKinds,
                        StrictData,
                        TemplateHaskell,
                        RecordWildCards,
                        NamedWildCards,
                        PartialTypeSignatures,
                        AllowAmbiguousTypes,
                        ImpredicativeTypes,
                        UndecidableSuperClasses
    ghc-options: -fprint-potential-instances -Weverything -Wno-unrecognised-warning-flags -Wno-star-is-type -Wno-missing-signatures -Wno-orphans -Wno-implicit-prelude -Wno-unused-imports -Wno-unused-packages -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures -Wno-term-variable-capture -Wno-missing-export-lists -Wno-missing-deriving-strategies -Wno-missing-safe-haskell-mode -Wno-missing-exported-signatures -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe -Wno-deriving-defaults -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-missing-home-modules -Wno-name-shadowing -Wno-type-defaults -Wno-incomplete-patterns -Wno-incomplete-uni-patterns -Wno-prepositive-qualified-module -Wno-missing-role-annotations -Wno-operator-whitespace
library
    import:             common-settings
    hs-source-dirs:     src
    exposed-modules:    Quaalude
                        Quaalude.Encoding.JSON
                        Quaalude.Encoding.JSON.TH
                        Quaalude.Unary
    other-modules:      Quaalude.TH
                        Quaalude.Bits
                        Quaalude.Collection
                        Quaalude.Grid
                        Quaalude.Coord
                        Quaalude.Tracers
                        Quaalude.Type
                        Quaalude.Alias
                        Quaalude.Braket
                        Quaalude.Util
                        Quaalude.Records
                        Quaalude.Megaparsec
